--- a/index.html
+++ b/index.html
@@ -17,8 +17,11 @@
             flex-direction: column;
             align-items: center;
             text-align: center;
-            padding: 20px;
-            font-size: 2em;
+            padding: 10px;
+        }
+        header h1 {
+            font-size: 3em;
+            margin: 0;
         }
         nav ul {
             display: flex;
@@ -33,6 +36,7 @@
         nav ul li a {
             text-decoration: none;
             padding: 5px 10px;
+            font-size: 1em;
             transition: color 0.3s ease-in-out;
         }
         nav ul li a:hover {
