--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>farofa - loja colaborativa</title>
     <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="icon" type="image/x-icon" href="assets/imagens/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="asstes/imagens/favicon.ico">
     <style>
         body {
-            font-size: 18px;
+            font-size: 20px;
             line-height: 1.8;
             scroll-behavior: smooth;
-            max-width: 800px;
+            max-width: 900px;
             margin: 0 auto;
             padding: 20px;
         }
@@ -23,7 +23,7 @@
             padding: 10px;
         }
         header h1 {
-            font-size: 3em;
+            font-size: 4em;
             margin: 0;
         }
         nav ul {
@@ -39,7 +39,7 @@
         nav ul li a {
             text-decoration: none;
             padding: 5px 10px;
-            font-size: 1em;
+            font-size: 1.2em;
             transition: color 0.3s ease-in-out;
         }
         nav ul li a:hover {
@@ -49,7 +49,7 @@
             display: flex;
             align-items: center;
             justify-content: space-between;
-            padding: 40px;
+            padding: 60px 20px;
             opacity: 0;
             transform: translateY(20px);
             transition: opacity 0.6s ease-out, transform 0.6s ease-out;
@@ -59,27 +59,27 @@
             transform: translateY(0);
         }
         .texto {
-            width: 100%;
-            max-width: 600px;
+            width: 55%;
             text-align: justify;
+            padding-right: 40px;
         }
         .imagem {
-            width: 40%;
+            width: 45%;
         }
         .imagem img {
             width: 100%;
-            max-width: 400px;
+            max-width: 500px;
             border-radius: 10px;
         }
         .galeria {
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
-            gap: 10px;
+            gap: 20px;
             padding: 20px;
         }
         .galeria img {
-            width: 100%;
+            width: calc(33% - 20px);
             max-width: 300px;
             border-radius: 10px;
             transition: transform 0.3s ease-in-out;
@@ -90,12 +90,13 @@
         footer {
             background-color: #FFEE51;
             color: #06443b;
-            padding: 20px;
+            padding: 30px;
             text-align: center;
+            font-size: 1.2em;
         }
         @media (max-width: 768px) {
             body {
-                font-size: 16px;
+                font-size: 18px;
             }
             nav ul {
                 flex-direction: column;
@@ -105,7 +106,15 @@
                 flex-direction: column;
                 text-align: center;
             }
-            .texto, .imagem {
+            .texto {
+                width: 100%;
+                padding-right: 0;
+            }
+            .imagem {
+                width: 100%;
+                margin-top: 20px;
+            }
+            .galeria img {
                 width: 100%;
             }
         }
@@ -156,6 +165,15 @@
         </div>
         <div class="imagem"><img src="assets/imagens/2.png" alt="Imagem 2"></div>
     </section>
+    
+    <div class="galeria">
+        <img src="assets/imagens/3.png" alt="Imagem 3">
+        <img src="assets/imagens/4.png" alt="Imagem 4">
+        <img src="assets/imagens/5.png" alt="Imagem 5">
+        <img src="assets/imagens/6.png" alt="Imagem 6">
+        <img src="assets/imagens/7.png" alt="Imagem 7">
+        <img src="assets/imagens/8.png" alt="Imagem 8">
+    </div>
     
     <footer>
         <p>&copy; 2025 farofa. todos os direitos reservados.</p>
