--- a/index.html
+++ b/index.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>a farofa</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="icon" href="images/favicon.ico" type="image/x-icon">
-  <link href="https://fonts.googleapis.com/css2?family=Calistoga&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css" />
+  <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
+  <link href="https://fonts.googleapis.com/css2?family=Calistoga&family=Montserrat:wght@400;700&display=swap" rel="stylesheet" />
 </head>
 <body>
   <header>
     <h1>a farofa</h1>
     <nav>
       <ul>
-        <li><a href="#sobre">sobre</a></li>
+        <li><a href="#oque-e">o que é?</a></li>
         <li><a href="#como-funciona">como funciona</a></li>
+        <li><a href="#veja-mais">veja mais</a></li>
         <li><a href="#como-participar">como participar</a></li>
         <li><a href="#planos">planos</a></li>
         <li><a href="#diretrizes">diretrizes</a></li>
@@ -24,34 +25,113 @@
   </header>
 
   <main>
-    <section id="sobre">
-      <h2>sobre</h2>
-      <p>a farofa é uma loja online colaborativa para artistas. acreditamos em transparência, simplicidade e acessibilidade para artistas de todos os tamanhos.</p>
+    <section id="oque-e">
+      <h2>o que é?</h2>
+      <p>a farofa é a loja colaborativa online para artistas que preza pela diversidade de estilos, origens e identidades. você cria e a gente cuida do estoque, divulgação, venda e envio dos seus produtos autorais.</p>
     </section>
 
     <section id="como-funciona">
-      <h2>como funciona</h2>
-      <p>você envia sua arte, envia os produtos e a gente cuida do resto. sem taxa fixa, sem burocracia, sem mistério.</p>
+      <h2>como funciona?</h2>
+      <p>cada artista parceire paga uma assinatura fixa e envia seus produtos para nosso centro de distribuição, que fica em belo horizonte/mg. a partir daí, a equipe farofa cuida para que tudo chegue aos seus clientes.</p>
+    </section>
+
+    <section id="veja-mais">
+      <h2>fotos da farofa</h2>
+      <div class="galeria">
+        <figure><img src="images/1.png" alt="produto 1"></figure>
+        <figure><img src="images/2.png" alt="produto 2"></figure>
+        <figure><img src="images/3.png" alt="produto 3"></figure>
+        <figure><img src="images/4.png" alt="produto 4"></figure>
+        <figure><img src="images/5.png" alt="produto 5"></figure>
+        <figure><img src="images/6.png" alt="produto 6"></figure>
+        <figure><img src="images/7.png" alt="produto 7"></figure>
+        <figure><img src="images/8.png" alt="produto 8"></figure>
+      </div>
+    </section>
+
+    <section>
+      <h2>quanto vou ganhar?</h2>
+      <p>o artista define quanto quer receber por cada produto. aí a farofa adiciona 10% sobre esse valor, que vai cobrir os custos da plataforma online, marketing, embalagem e manuseio.</p>
+    </section>
+
+    <section>
+      <h2>e quando vou receber?</h2>
+      <p>o pagamento do artista se dá no quinto dia útil de cada mês e o valor é referente ao vendido no mês anterior. o objetivo é ser o mais transparente e simples possível.</p>
+    </section>
+
+    <section>
+      <h2>como é a divulgação?</h2>
+      <p>a equipe farofa tem um social media incrível dedicado a divulgar a loja e seus produtos nas redes sociais da meta. faremos posts e tráfego pago para alcançar cada vez mais clientes.</p>
+    </section>
+
+    <section>
+      <h2>quanto posso estocar?</h2>
+      <p>cada artista parceire tem direito a 100 litros de armazenamento. o estoque é dividido em duas caixas de 33x51x30cm, com a possibilidade de comprar espaço adicional.</p>
+    </section>
+
+    <section>
+      <h2>e os envios?</h2>
+      <p>o envio é feito pela farofa em até 5 dias úteis após a venda. a embalagem é padrão da loja e prezamos pelo bem-estar do produto assim como pela acessibilidade do frete.</p>
     </section>
 
     <section id="como-participar">
-      <h2>como participar</h2>
-      <p>abre uma chamada por temporada. envie seu portfólio e proposta de coleção quando estiver aberta.</p>
+      <h2>como participar?</h2>
+      <p>para ser um artista parceire, basta mandar um email para atendimento@lojafarofa.com.br e escolher o plano que mais se adeque a sua situação.</p>
     </section>
 
-    <section id="planos">
-      <h2>planos</h2>
-      <p>modelo colaborativo, com divisão justa dos lucros e suporte para produção sob demanda.</p>
+    <section>
+      <h2>formalidades</h2>
+      <p>ao enviar o email, vai ser verificada a viabilidade de vender seus produtos na farofa. então, tudo será formalizado através de contrato e emitimos os boletos de pagamento da sua assinatura.</p>
     </section>
 
     <section id="diretrizes">
-      <h2>diretrizes</h2>
-      <p>valorizamos originalidade, respeito e inclusão. leia as regras antes de enviar sua proposta.</p>
+      <h2>as diretrizes da loja</h2>
+      <ul>
+        <li><strong>autoral:</strong> a arte deve ser de própria autoria do artista.</li>
+        <li><strong>acessível:</strong> a arte deve ser apropriada a todos os públicos.</li>
+        <li><strong>respeito:</strong> a arte e artista devem respeitar os direitos humanos.</li>
+      </ul>
+    </section>
+
+    <section id="planos">
+      <h2>e no final, quanto custa?</h2>
+      <ul>
+        <li><strong>60r$</strong> plano mensal – em até 2x sem juros</li>
+        <li><strong>150r$</strong> plano trimestral – em até 3x sem juros</li>
+        <li><strong>480r$</strong> plano anual – em até 12x sem juros</li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>e se precisar de mais espaço?</h2>
+      <p>se você precisar de mais espaço de armazenamento para comportar todos os seus produtos, além do que oferecemos, iremos adicionar 30r$ na mensalidade a cada 50 litros adicionais.</p>
+    </section>
+
+    <section>
+      <h2>condições de pagamento</h2>
+      <p>o pagamento é via boleto com a data de vencimento definida por você. o número de parcelas é definido no momento do contrato e então já emitimos todos os boletos.</p>
+    </section>
+
+    <section>
+      <h2>para onde vai esse dinheiro?</h2>
+      <p>tudo é feito para ser o mais acessível possível enquanto pagamos nossa equipe de forma digna.</p>
+      <ul>
+        <li>📄 folha de pagamento — 50%</li>
+        <li>🎨 material de divulgação — 25%</li>
+        <li>📦 estoque — 20%</li>
+        <li>💡 taxas e investimentos — 5%</li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>lançamento da loja</h2>
+      <p>a loja vai entrar no ar para venda de produtos no dia <strong>01/07/2025</strong>. artistas que fecharem com a gente antes desta data ganham <strong>um mês extra</strong> em sua assinatura.</p>
     </section>
 
     <section id="contato">
-      <h2>contato</h2>
-      <p>envie um e-mail para <a href="mailto:contato@lojafarofa.com.br">contato@lojafarofa.com.br</a> ou fale com a gente pelo <a href="#">instagram</a>.</p>
+      <h2>saiba mais</h2>
+      <p>caso fique alguma dúvida, é só dar um alô</p>
+      <p><a class="botao-email" href="mailto:atendimento@lojafarofa.com.br">mandar email</a></p>
     </section>
   </main>
 
