--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>a farofa</title>
+  <title>farofa</title>
   <link rel="stylesheet" href="style.css"> 
   <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
   <link href="https://fonts.googleapis.com/css2?family=Calistoga&family=Montserrat:wght@400;700&display=swap" rel="stylesheet" />
@@ -15,7 +15,7 @@
       <ul>
         <li><a href="#oque-e">o que é?</a></li>
         <li><a href="#como-funciona">como funciona</a></li>
-        <li><a href="#veja-mais">veja mais</a></li>
+        <li><a href="#galeria">galeria</a></li>
         <li><a href="#como-participar">como participar</a></li>
         <li><a href="#planos">planos</a></li>
         <li><a href="#diretrizes">diretrizes</a></li>
@@ -35,8 +35,8 @@
       <p>cada artista parceire paga uma assinatura fixa e envia seus produtos para nosso centro de distribuição, que fica em belo horizonte/mg. a partir daí, a equipe farofa cuida para que tudo chegue aos seus clientes.</p>
     </section>
 
-    <section id="veja-mais">
-      <h2>fotos da farofa</h2>
+    <section id="galeria">
+      <h2>galeriada farofa</h2>
       <div class="galeria">
         <figure><img src="images/1.png" alt="produto 1"></figure>
         <figure><img src="images/2.png" alt="produto 2"></figure>
@@ -76,7 +76,7 @@
 
     <section id="como-participar">
       <h2>como participar?</h2>
-      <p>para ser um artista parceire, basta mandar um email para atendimento@lojafarofa.com.br e escolher o plano que mais se adeque a sua situação.</p>
+      <p>para ser um artista parceire, basta mandar um email para contato@lojafarofa.com.br e escolher o plano que mais se adeque a sua situação.</p>
     </section>
 
     <section>
@@ -89,7 +89,7 @@
       <ul>
         <li><strong>autoral:</strong> a arte deve ser de própria autoria do artista.</li>
         <li><strong>acessível:</strong> a arte deve ser apropriada a todos os públicos.</li>
-        <li><strong>respeito:</strong> a arte e artista devem respeitar os direitos humanos.</li>
+        <li><strong>diversa:</strong> a arte e artista devem respeitar os direitos humanos.</li>
       </ul>
     </section>
 
@@ -116,10 +116,10 @@
       <h2>para onde vai esse dinheiro?</h2>
       <p>tudo é feito para ser o mais acessível possível enquanto pagamos nossa equipe de forma digna.</p>
       <ul>
-        <li>📄 folha de pagamento — 50%</li>
-        <li>🎨 material de divulgação — 25%</li>
-        <li>📦 estoque — 20%</li>
-        <li>💡 taxas e investimentos — 5%</li>
+        <li>folha de pagamento — 50%</li>
+        <li>material de divulgação — 25%</li>
+        <li>estoque — 20%</li>
+        <li>taxas e investimentos — 5%</li>
       </ul>
     </section>
 
@@ -131,12 +131,13 @@
     <section id="contato">
       <h2>saiba mais</h2>
       <p>caso fique alguma dúvida, é só dar um alô</p>
-      <p><a class="botao-email" href="mailto:atendimento@lojafarofa.com.br">mandar email</a></p>
+      <p><a class="botao-email" href="mailto:contato@lojafarofa.com.br">mandar email</a></p>
     </section>
   </main>
 
   <footer>
     <p>movido a café e otimismo</p>
+    <p>loja farofa - 2025</p>
   </footer>
 </body>
 </html>
