--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <header>
-    <h1>a farofa</h1>
+    <h1>farofa</h1>
     <nav>
       <ul>
         <li><a href="#oque-e">o que é?</a></li>
@@ -36,7 +36,7 @@
     </section>
 
     <section id="galeria">
-      <h2>galeriada farofa</h2>
+      <h2>galeria da farofa</h2>
       <div class="galeria">
         <figure><img src="images/1.png" alt="produto 1"></figure>
         <figure><img src="images/2.png" alt="produto 2"></figure>
