--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         <figure><img src="images/7.png" alt="produto 7"></figure>
         <figure><img src="images/8.png" alt="produto 8"></figure>
       </div>
+      <p>veja mais em nosso instagram <a href="https://instagram.com/loja.farofa" target="_blank">@loja.farofa</a></p>
     </section>
 
     <section>
