--- a/index.html
+++ b/index.html
@@ -140,8 +140,6 @@
     <p>movido a café e otimismo</p>
     <p>loja farofa - 2025</p>
   </footer>
-  <a href="mailto:contato@lojafarofa.com.br" class="botao-email-fixo" title="mandar email">
-    📩
-  </a>
+  <a href="mailto:contato@lojafarofa.com.br" class="botao-fixo-email" title="mandar email">✉️</a>
 </body>
 </html>
