--- a/index.html
+++ b/index.html
@@ -54,14 +54,12 @@
     <section id="galeria">
       <h2>galeria da farofa</h2>
       <div class="galeria">
-        <figure><img src="images/1.png" alt="produto 1"></figure>
-        <figure><img src="images/2.png" alt="produto 2"></figure>
-        <figure><img src="images/3.png" alt="produto 3"></figure>
-        <figure><img src="images/4.png" alt="produto 4"></figure>
-        <figure><img src="images/5.png" alt="produto 5"></figure>
-        <figure><img src="images/6.png" alt="produto 6"></figure>
-        <figure><img src="images/7.png" alt="produto 7"></figure>
-        <figure><img src="images/8.png" alt="produto 8"></figure>
+        <figure><img src="images/1.jpg" alt="produto 1"></figure>
+        <figure><img src="images/2.jpg" alt="produto 2"></figure>
+        <figure><img src="images/3.jpg" alt="produto 3"></figure>
+        <figure><img src="images/4.jpg" alt="produto 4"></figure>
+        <figure><img src="images/5.jpg" alt="produto 5"></figure>
+        <figure><img src="images/6.jpg" alt="produto 6"></figure>
       </div>
       <p>veja mais em nosso instagram <a href="https://instagram.com/loja.farofa" target="_blank">@loja.farofa</a></p>
     </section>
