--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
         <figure><img src="images/4.jpg" alt="produto 4"></figure>
         <figure><img src="images/5.jpg" alt="produto 5"></figure>
         <figure><img src="images/6.jpg" alt="produto 6"></figure>
+        figure><img src="images/7.jpg" alt="produto 7"></figure>
+        <figure><img src="images/8.jpg" alt="produto 8"></figure>
       </div>
       <p>veja mais em nosso instagram <a href="https://instagram.com/loja.farofa" target="_blank">@loja.farofa</a></p>
     </section>
@@ -140,7 +142,7 @@
 
     <section>
       <h2>lançamento da loja</h2>
-      <p>a loja vai entrar no ar para venda de produtos no dia <strong>01/07/2025</strong>. artistas que fecharem com a gente antes desta data ganham <strong>um mês extra</strong> em sua assinatura.</p>
+      <p>a loja vai entrar no ar para venda de produtos no dia <strong>01/08/2025</strong>. artistas que fecharem com a gente antes desta data ganham <strong>um mês extra</strong> em sua assinatura.</p>
     </section>
 
     <section id="contato">
