--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <figure><img src="images/4.jpg" alt="produto 4"></figure>
         <figure><img src="images/5.jpg" alt="produto 5"></figure>
         <figure><img src="images/6.jpg" alt="produto 6"></figure>
-        figure><img src="images/7.jpg" alt="produto 7"></figure>
+        <figure><img src="images/7.jpg" alt="produto 7"></figure>
         <figure><img src="images/8.jpg" alt="produto 8"></figure>
       </div>
       <p>veja mais em nosso instagram <a href="https://instagram.com/loja.farofa" target="_blank">@loja.farofa</a></p>
